@@ -5,10 +5,8 @@ import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 import ru.test.tireservice.model.Order;
-import ru.test.tireservice.model.Service;
+import ru.test.tireservice.model.Services;
 
-import java.math.BigDecimal;
-import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -18,28 +16,25 @@ import java.util.stream.Collectors;
 @AllArgsConstructor
 @NoArgsConstructor
 public class OrderDtoRequest {
-
-    private BigDecimal totalAmount;
-    private Order.OrderStatus status;
-    private LocalDateTime createdAt;
     private Long customer;
-    private Long master;
     private Long car;
+    private Long master;
     private List<Long> services = new ArrayList<>();
 
     public static OrderDtoRequest from(Order order) {
         return OrderDtoRequest.builder()
-                .totalAmount(order.getTotalAmount())
-                .status(order.getStatus())
-                .createdAt(order.getCreatedAt())
                 .customer(order.getCustomer().getId())
-                .master(order.getMaster().getId())
-                .services(order.getServices().stream().map(Service::getId).toList())
+                .car(order.getCar().getId())
+                .master(order.getMaster() != null ? order.getMaster().getId() : null)
+                .services(order.getServices().stream()
+                        .map(Services::getId)
+                        .collect(Collectors.toList()))
                 .build();
     }
 
     public static List<OrderDtoRequest> from(List<Order> orders) {
-        return orders.stream().map(OrderDtoRequest::from).collect(Collectors.toList());
+        return orders.stream()
+                .map(OrderDtoRequest::from)
+                .collect(Collectors.toList());
     }
-
 }
